# Zenith

./: .gitignore  .gitpod.yml  CHANGELOG.md  README.md  ZENITH_INSTRUCTIONS.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG.md  DOCS.md
.github/workflows/: build.yml  lint.yml  tests.yml
app/src/: index.html
app/src/css/: style.css
app/src/js/: client.js  main.js  monitor.js  orb.js  voice-ui.js  voice.js
bridges/nodejs/: package.json
config/: active_skills.json  loader.py  validator.py  zenith.example.yaml  zenith.yaml
core/: __init__.py  langs.json  skills-endpoints.json
core/browser/: __init__.py  automation.py
core/desktop/: __init__.py  controller.py
core/memory/: __init__.py  memory.py
core/vision/: __init__.py  face_auth.py  object_detect.py  ocr.py
providers/: gemini.py  manager.py
scripts/: build-binaries.js
scripts/release/: pre-release-binaries.js
scripts/setup/: setup-binaries.js
scripts/setup-offline/: setup-offline.js
server/src/: constants.ts  index.ts  telemetry.ts
skills/automation/: domain.json
skills/knowledge/: domain.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/unit/: test_config.py  test_memory.py  test_provider_manager.py  test_skill_routing.py  test_vision.py
voice/: README.md  agent.py  mcp_server.py  pyproject.toml  windows_sapi_tts.py
voice/friday_tools/prompts/: __init__.py
voice/friday_tools/resources/: __init__.py
voice/friday_tools/tools/: __init__.py  desktop.py
(+118 files in other folders)
