[project]
name = "zenith-voice"
version = "0.1.0"
description = "Zenith voice pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "livekit-agents[groq,silero]~=1.5",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
    "pytz>=2026.2",
    "wikipedia>=1.4.0",
]

[project.scripts]
zenith = "server:main"
zenith_voice = "agent:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
